--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,22 @@
     <groupId>TechnicalChallenge2</groupId>
     <artifactId>com.gft</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.7</version>
+            <configuration>
+                <formats>
+                    <format>html</format>
+                    <format>xml</format>
+                </formats>
+                <check/>
+            </configuration>
+        </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -15,6 +31,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 
 </project>
